Fixed too long names of songs. Added song metadata validation.

--- a/adminAndMobile/assets/less/admin.less
+++ b/adminAndMobile/assets/less/admin.less
@@ -22,3 +22,8 @@ body {
   color:#fff !important;
   z-index:2;
 }
+
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
